@@ -1,3 +1,8 @@
+2019-10-15  Iain Sandoe  <iain@sandoe.co.uk>
+
+	* config/darwin.c (darwin_binds_local_p): Update to call
+	default_binds_local_p_3 () directly. amend comments.
+
 2019-10-15  Richard Biener  <rguenther@suse.de>
 
 	* lto-streamer-out.c (lto_variably_modified_type_p): New.
